fix paybutton on IE8

--- a/app/_css/animations.sass
+++ b/app/_css/animations.sass
@@ -62,21 +62,22 @@ $gridStagger: .05s;
 
 .footer
   +opacity(0);
-  transition: 0.3s;
-  transform: translateY(0);
+  transition: 0.3s transform;
+  transform: translateY(-$footerh);
 
 #topbar
   transform: translateY(-$topbarh);
 
-#form-common.not-first
+#form-common
   .pad
-    +opacity(1);
-    animation: $springTime spring;
     transform: none;
     transition: none;
 
   .legend, #payment-options
     transition: $springTime;
+
+#form-common.not-first .pad
+    animation: $springTime spring;
 
 #body.tab
   #form-common
@@ -93,7 +94,7 @@ $gridStagger: .05s;
 
   #form.shown, #otp-form.shown.verify
     .footer
-      transform: translateY($footerh - 1px);
+      transform: translateY(0px);
       +opacity(1);
       transition-delay: $first;
 
@@ -107,7 +108,7 @@ $gridStagger: .05s;
     transition: $first transform ease-out $first, $first opacity ease-out $first, .1s color;
 
   .shown
-    opacity: 1;
+    +opacity(1);
     transition-delay: $second;
     pointer-events: all;
 
